--- a/Sevenminuitworkout/app/src/main/AndroidManifest.xml
+++ b/Sevenminuitworkout/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.SevenMinuitWorkout"
         tools:targetApi="31">
         <activity
+            android:name=".FinishActivity"
+            android:exported="false" />
+        <activity
             android:name=".ExerciseActivity"
             android:exported="false" />
         <activity
