design custom toolbar and activity

--- a/Happy Places/app/src/main/AndroidManifest.xml
+++ b/Happy Places/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.HappyPlaces"
         tools:targetApi="31">
         <activity
+            android:name=".AddHappyPlaceActivity"
+            android:screenOrientation="portrait"
+            android:label="Add Happy Place"
+            android:theme="@style/CustomNoActionBarTheme"
+            android:exported="false"
+            tools:ignore="LockedOrientationActivity" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
